--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -1,244 +1,245 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>io.mosip.authentication</groupId>
-		<artifactId>authentication-parent</artifactId>
-		<version>1.2.0-SNAPSHOT</version>
-	</parent>
-	<version>1.2.0-SNAPSHOT</version>
+    <parent>
+        <groupId>io.mosip.authentication</groupId>
+        <artifactId>authentication-parent</artifactId>
+        <version>1.2.0-SNAPSHOT</version>
+    </parent>
+    <version>1.2.0-SNAPSHOT</version>
 
-	<artifactId>authentication-service</artifactId>
-	<packaging>jar</packaging>
+    <artifactId>authentication-service</artifactId>
+    <packaging>jar</packaging>
 
-	<name>authentication-service</name>
-	<description>Maven project of MOSIP ID-Authentication Service</description>
+    <name>authentication-service</name>
+    <description>Maven project of MOSIP ID-Authentication Service</description>
 
-	<dependencies>
-		<dependency>
-			<groupId>io.mosip.authentication</groupId>
-			<artifactId>authentication-core</artifactId>
-			<version>${authentication-core.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.authentication</groupId>
-			<artifactId>authentication-common</artifactId>
-			<version>${authentication-common.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.authentication</groupId>
-			<artifactId>authentication-authtypelockfilter-impl</artifactId>
-			<version>${authentication-authtypelockfilter-impl.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.authentication</groupId>
-			<artifactId>authentication-hotlistfilter-impl</artifactId>
-			<version>${authentication-hotlistfilter-impl.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-pinvalidator</artifactId>
-			<version>${kernel-pinvalidator.version}</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>io.mosip.authentication</groupId>
+            <artifactId>authentication-core</artifactId>
+            <version>${authentication-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.mosip.authentication</groupId>
+            <artifactId>authentication-common</artifactId>
+            <version>${authentication-common.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.mosip.authentication</groupId>
+            <artifactId>authentication-authtypelockfilter-impl</artifactId>
+            <version>${authentication-authtypelockfilter-impl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.mosip.authentication</groupId>
+            <artifactId>authentication-hotlistfilter-impl</artifactId>
+            <version>${authentication-hotlistfilter-impl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.mosip.kernel</groupId>
+            <artifactId>kernel-pinvalidator</artifactId>
+            <version>${kernel-pinvalidator.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-templatemanager-velocity</artifactId>
-			<version>${kernel-templatemanager-velocity.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.servlet</groupId>
-					<artifactId>servlet-api</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>dom4j</groupId>
-					<artifactId>dom4j</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-dataaccess-hibernate</artifactId>
-			<version>${kernel-dataaccess-hibernate.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-idgenerator-tokenid</artifactId>
-			<version>${kernel-idgenerator-tokenid.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>${postgresql.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<version>${spring.boot.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<version>${spring.boot.version}</version>
-			<exclusions>
-		    <exclusion>
-			      <groupId>org.mockito</groupId>
-			      <artifactId>mockito-core</artifactId>
-		    </exclusion>
-		  </exclusions>
-		</dependency>
-		<dependency>
-		  <groupId>org.mockito</groupId>
-		  <artifactId>mockito-core</artifactId>
-		  <version>${mockito.version}</version>
-		  <scope>test</scope>
-		</dependency>		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>${spring.boot.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
-			<version>${spring-cloud-config.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-			<version>${spring.boot.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-core</artifactId>
-			<version>${io.micrometer.prometheus.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-registry-prometheus</artifactId>
-			<version>${io.micrometer.prometheus.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-websubclient-api</artifactId>
-			<version>${kernel-websubclient-api.version}</version>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${spring.boot.version}</version>
-				<configuration>
-					<executable>true</executable>
-					<layout>ZIP</layout>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>build-info</goal>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<profiles>
-		<profile>
-			<id>openapi-doc-generate-profile</id>
-			<dependencies>
-				<dependency>
-					<groupId>io.mosip.kernel</groupId>
-					<artifactId>kernel-auth-adapter</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
-				</dependency>
-				<dependency>
-					<groupId>io.mosip.authentication</groupId>
-					<artifactId>authentication-childauthfilter-impl</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
-				</dependency>
-				<dependency>
-					<groupId>io.mosip.biosdk</groupId>
-					<artifactId>biosdk-client</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
-				</dependency>
-				<dependency>
-					<groupId>io.mosip.demosdk</groupId>
-					<artifactId>demosdk-client</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-						<plugin>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-maven-plugin</artifactId>
-							<version>${spring.boot.version}</version>
-							<configuration>
-								<executable>true</executable>
-								<layout>ZIP</layout>
-								<wait>1000</wait>
-								<maxAttempts>180</maxAttempts>
-							</configuration>
-							<executions>
-								<execution>
-									<id>pre-integration-test</id>
-									<goals>
-										<goal>start</goal>
-									</goals>
-									<configuration>
-										<folders>
-											<folder>src/test/resources</folder>
-										</folders>
-										<profiles>
-											<profile>openapi-profile</profile>
-										</profiles>
-										<arguments>
-											<argument>--server.port=8090</argument>
-											<argument>--server.servlet.context-path=/app/generic</argument>
-										</arguments>
-									</configuration>
-								</execution>
-								<execution>
-									<id>post-integration-test</id>
-									<goals>
-										<goal>stop</goal>
-									</goals>
-								</execution>
-								<execution>
-									<goals>
-										<goal>build-info</goal>
-										<goal>repackage</goal>
-									</goals>
-								</execution>
-							</executions>
-						</plugin>
-						<plugin>
-							<groupId>org.springdoc</groupId>
-							<artifactId>springdoc-openapi-maven-plugin</artifactId>
-							<version>0.2</version>
-							<executions>
-								<execution>
-									<id>integration-test</id>
-									<goals>
-										<goal>generate</goal>
-									</goals>
-								</execution>
-							</executions>
-							<configuration>
-								<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs/Id%20Authentication%20Service</apiDocsUrl>
-								<outputFileName>openapi.json</outputFileName>
-								<outputDir>${project.build.directory}</outputDir>
-								<skip>false</skip>
-							</configuration>
-						</plugin>
-					</plugins>
-			</build>
-		</profile>
-	</profiles>
+        <dependency>
+            <groupId>io.mosip.kernel</groupId>
+            <artifactId>kernel-templatemanager-velocity</artifactId>
+            <version>${kernel-templatemanager-velocity.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>dom4j</groupId>
+                    <artifactId>dom4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.mosip.kernel</groupId>
+            <artifactId>kernel-dataaccess-hibernate</artifactId>
+            <version>${kernel-dataaccess-hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.mosip.kernel</groupId>
+            <artifactId>kernel-idgenerator-tokenid</artifactId>
+            <version>${kernel-idgenerator-tokenid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <version>${spring.boot.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>${spring-cloud-config.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>${io.micrometer.prometheus.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>${io.micrometer.prometheus.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.mosip.kernel</groupId>
+            <artifactId>kernel-websubclient-api</artifactId>
+            <version>${kernel-websubclient-api.version}</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
+                <configuration>
+                    <executable>true</executable>
+                    <layout>ZIP</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-info</goal>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <profiles>
+        <profile>
+            <id>openapi-doc-generate-profile</id>
+            <dependencies>
+                <dependency>
+                    <groupId>io.mosip.kernel</groupId>
+                    <artifactId>kernel-auth-adapter</artifactId>
+                    <version>1.2.0-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.mosip.authentication</groupId>
+                    <artifactId>authentication-childauthfilter-impl</artifactId>
+                    <version>1.2.0-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.mosip.biosdk</groupId>
+                    <artifactId>biosdk-client</artifactId>
+                    <version>1.2.0-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.mosip.demosdk</groupId>
+                    <artifactId>demosdk-client</artifactId>
+                    <version>1.2.0-SNAPSHOT</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <version>${spring.boot.version}</version>
+                        <configuration>
+                            <executable>true</executable>
+                            <layout>ZIP</layout>
+                            <wait>1000</wait>
+                            <maxAttempts>180</maxAttempts>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>pre-integration-test</id>
+                                <goals>
+                                    <goal>start</goal>
+                                </goals>
+                                <configuration>
+                                    <folders>
+                                        <folder>src/test/resources</folder>
+                                    </folders>
+                                    <profiles>
+                                        <profile>openapi-profile</profile>
+                                    </profiles>
+                                    <arguments>
+                                        <argument>--server.port=8090</argument>
+                                        <argument>--server.servlet.context-path=/app/generic</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>post-integration-test</id>
+                                <goals>
+                                    <goal>stop</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <goals>
+                                    <goal>build-info</goal>
+                                    <goal>repackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springdoc</groupId>
+                        <artifactId>springdoc-openapi-maven-plugin</artifactId>
+                        <version>0.2</version>
+                        <executions>
+                            <execution>
+                                <id>integration-test</id>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs/Id%20Authentication%20Service
+                            </apiDocsUrl>
+                            <outputFileName>openapi.json</outputFileName>
+                            <outputDir>${project.build.directory}</outputDir>
+                            <skip>false</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
